Tools and Tech Tutorials/Kubernetes/configs/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: myapp
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
            - name: nginx
              image: nginx:1.21-alpine
              ports:
              - containerPort: 80
