Tools and Tech Tutorials/Kubernetes/configs/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: database
    namespace: myapp
spec:
    replicas: 2
    selector:
        matchLabels:
            app: database
    template:
        metadata:
            labels:
                app: database
        spec:
            containers:
            - name: redis
              image: redis:6-alpine
              ports:
              - containerPort: 6379
