Tools and Tech Tutorials/Kubernetes/configs/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    env: prod
  name: pod
spec:
  containers:
  - args:
    - my-pod
    image: nginx:1.20
    name: pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
