Tools and Tech Tutorials/Kubernetes/configs/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-db
  labels:
    app: my-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-db
  template:
    metadata:
      labels:
        app: my-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: db-data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: mysql-data-pvc
