Tools and Tech Tutorials/Kubernetes/configs/nginx-deployment-with-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      automountServiceAccountToken: false
      containers:
      - name: nginx
        image: nginx:1.20
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "128Mi"
            cpu: "500m"
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 80
      - name: log-sidecar
        image: busybox:1.28
        command: [ 'sh', '-c', "while true; do echo sync app logs; sleep 20; done" ]
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
            ephemeral-storage: "500Mi"
          limits:
            memory: "64Mi"
            cpu: "100m"
            ephemeral-storage: "1Gi"
