Tools and Tech Tutorials/Kubernetes/configs/nginx-sidecar-volume-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.20
        ports:
        - containerPort: 80
          command: [ 'sh', '-c' ]
          args:
          - while true; do echo "$(date) INFO some app data" >> /var/log/app.log; sleep 5; done;

        volumeMounts:
        - name: log-data
          mountPath: /var/log

        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"

      - name: log-sidecar
        image: busybox:1.28
        command: [ 'sh', '-c' ]
        args:
        - while true; do echo sync app logs; sleep 20; done;
        volumeMounts:
        - name: log-data
          mountPath: /var/log

        resources:
          limits:
            cpu: "100m"
            memory: "64Mi"
          requests:
            cpu: "50m"
            memory: "32Mi"

      volumes:
      - name: log-data
        emptyDir: {}
