Tools and Tech Tutorials/Kubernetes/configs/pod-health-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-health-probes
spec:
  automountServiceAccountToken: false
  containers:
  - name: myapp
    image: nginx:1.20
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
        ephemeral-storage: 1Gi
      limits:
        cpu: 200m
        memory: 256Mi
    readinessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 5
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
