Tools and Tech Tutorials/Kubernetes/configs/pod-with-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-toleration
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx:1.20
  tolerations:
  - effect: "NoSchedule"
    operator: "Exists"
  nodeName: master01
