Tools and Tech Tutorials/Kubernetes/configs/pod-worker01-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-worker01
spec:
  nodeSelector:
    type: cpu
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
