Tools and Tech Tutorials/Kubernetes/configs/pod-worker01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-worker01
spec:
  nodeName: worker01
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
