Tools and Tech Tutorials/Kubernetes/configs/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:1.24.0
    ports:
    - containerPort: 80
