Tools and Tech Tutorials/Kubernetes/configs/nginx-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    svc: test-nginx
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30001
