Tools and Tech Tutorials/Kubernetes/configs/np-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: np-frontend
    namespace: myapp
spec:
    podSelector:
        matchLabels:
            app: frontend
    policyTypes:
    - Egress
    egress:
    - to:
      - podSelector:
          matchLabels:
              app: backend
      ports:
      - protocol: TCP
        port: 80
